# kingscanyon-backpacking

./: .gitignore  CLAUDE.md  Makefile  README.md  TOPO_SUMMARY.md  TRAILS_SUMMARY.md  index.html  package.json  pyproject.toml  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: deploy.yml
public/: dem.tif.aux.xml  lakes-points.geojson  lakes.geojson  naip.tif.aux.xml  rivers.geojson  topo-points.geojson
public/naip/: tiles.json
scripts/: bake_dem.py  bake_geojson.py  bake_naip.py  bake_topo.py  bake_trails.py  bake_trails_prep.py  bbox.json  overture_common.py  write_summaries.py
src/: App.tsx  ElevationProfile.tsx  MapView.tsx  index.css  mapConfig.ts  mineralKing.ts  projectBounds.ts  trailChain.ts
