[project]
name = "kingscanyon-data"
version = "0.0.0"
description = "Data-baking scripts for the Kings Canyon backpacking map (Overture Maps + USGS 3DEP)."
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyarrow>=15.0",
    "pyogrio>=0.8",
    "scipy>=1.11",
]

# This is a script collection, not an installable package: tell uv to manage the
# environment from the dependencies above without trying to build the project.
[tool.uv]
package = false
